style.css
:root {
  --pink: #f14e95;
  --bg: #0c0c0c;
  --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
}

body {
  font-size: 1.2rem;
  font-family: "Roboto", sans-serif;
  min-height: 4000px;
  overflow-x: hidden;
}

.hero {
  position: relative;
  min-height: 100vh;
}

.hero::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url(img/ring.jpg);
  background-size: cover;
  background-position: center;
  z-index: -1;
}

.hero h1,
.hero h4,
.hero p {
  text-shadow: var(--shadow);
}

.hero h1 {
  font-family: "Rancho", cursive;
  font-size: 5rem;
}

.hero h4 {
  font-size: 1.5rem;
}

.hero p {
  font-size: 1.4rem;
}

.hero a {
  color: var(--pink);
  background-color: white;
  box-shadow: var(--shadow);
}

.hero a:hover {
  background-color: var(--pink);
  color: white;
}

.mynavbar {
  background-color: rgba(54, 54, 54, 0.4) !important;
  backdrop-filter: blur(3px);
}

.mynavbar .offcanvas {
  height: 100vh;
}

.mynavbar .navbar-brand,
.mynavbar .offcanvas-title {
  font-family: "Rancho", cursive;
  font-size: 2.7rem;
}

.mynavbar .nav-link {
  text-transform: uppercase;
}

.home .container {
  background-image: url(img/floral-pattern1.png);
  background-size: cover;
  min-height: 100vh;
  margin-top: -5.7rem;
  padding-top: 15rem;
  padding-bottom: 5rem;
}

.home h2 {
  color: var(--pink);
  font-family: "Rancho", cursive;
  font-size: 5rem;
  font-weight: bold;
}

.home h3 {
  color: rgb(117, 117, 117);
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.home p {
  font-size: 1.1rem;
  color: rgb(117, 117, 117);
}

.home .couple {
  margin-top: 100px;
}

.home h3 {
  font-family: "Rancho", cursive;
  font-size: 2.5rem;
  color: var(--pink);
}

.home .couple img {
  width: 100%;
}
.home .heart {
  width: 50px;
  height: 50px;
  background-color: rgb(255, 255, 255);
  display: flex;
  border-radius: 50%;
  box-shadow: var(--shadow);
  position: absolute;
  left: 50%;
  transform: translateX(-50%) translateY(80px);
}

.home .heart i {
  margin: auto;
  color: var(--pink);
}

.info {
  background-color: var(--bg);
  color: white;
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.info h2 {
  color: var(--pink);
  font-family: "Rancho", cursive;
}

.info .alamat {
  font-size: 1.1rem;
}

.info .card {
  background-color: rgba(255, 255, 255, 0.2) !important;
  color: white !important;
  border: 1px solid rgb(94, 94, 94);
}

.info .card-header {
  border-bottom: 1px solid #949494;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
}

.info .card-body {
  font-size: 1rem;
}

.info .card-footer {
  border-top: 1px solid #949494;
  font-size: 1rem;
}

/* Media Query */

/* Extra Large */
@media (max-width: 1200px) {
  .home .heart {
    transform: translateX(-50%) translateY(60px);
  }
}
/* Laptop */

@media (max-width: 992px) {
  html {
    font-size: 75%;
  }
  .home .heart {
    display: none;
  }
}

/* Tablet */

@media (max-width: 768px) {
  html {
    font-size: 65%;
  }

  .mynavbar .nav-link {
    font-size: 1.5rem;
    text-align: center;
  }
}

/* Phone */

@media (max-width: 576px) {
  html {
    font-size: 60%;
  }
}

